<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Первый проект</string>
    <string name="city">Москва</string>
    <string name="weatherCondition">Ясно</string>
    <string name="realFeel">Ощущается как: +18 C</string>
    <string name="numberOfDegrees">+21 C</string>
    <string name="cityArea">Центральный округ</string>
    <string name="windSpeed">5 м/c</string>
    <string name="humidity">20%</string>
    <string name="pressureText">752 мм. рт. ст.</string>
    <string name="hourNow">Сейчас</string>
    <string name="plus1hour">21:00</string>
    <string name="hourPlus2">22:00</string>
    <string name="hourPlus2Degree">+11</string>
    <string name="hourNowDegree">+19</string>
    <string name="plus1hourDegree">+18</string>
    <string name="editTextChooseCity">Выберете город:</string>
    <string name="acc_textView1">Выберете интересующий город:</string>
    <string name="acc_inputCity">Название города</string>
    <string name="acc_checkBox_windSpeed">Показывать скорость ветра</string>
    <string name="acc_checkBox_pressure">Показывать давление</string>
    <string name="choose_city_button">Выбрать город</string>
    <string name="ok_button_choose_city">OK</string>
    <string name="snackbar_action_text">Подтверждаю</string>
    <string name="snackbar__text">Подтверждаете выбор?</string>
    <string name="refresh_button">Обновить</string>


    <string-array name="cities_array">

        <item>Москва</item>
        <item>Лондон</item>
        <item>Омск</item>
        <item>Вашингтон</item>

    </string-array>


</resources>
