<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <Space
            android:id="@+id/space1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/acc_textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc_textView1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/space1" />

        <LinearLayout
            android:id="@+id/linLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/acc_textView1"
            android:orientation="vertical">

            <AutoCompleteTextView
            android:id="@+id/acc_inputCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="city_name"
            android:ems="10"
            android:hint="@string/acc_inputCity"
            android:inputType="textPersonName" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/okButtonChooseCity"
                app:cornerRadius="28dp"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok_button_choose_city" />
        </LinearLayout>

        <Space
            android:id="@+id/space2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/linLayout" />

        <CheckBox
            android:id="@+id/acc_checkBox_windSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acc_checkBox_windSpeed"
            app:layout_constraintTop_toBottomOf="@id/space2"
            app:layout_constraintLeft_toLeftOf="parent" />

        <CheckBox
            android:id="@+id/acc_checkBox_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acc_checkBox_pressure"
            app:layout_constraintTop_toBottomOf="@id/acc_checkBox_windSpeed"
            app:layout_constraintLeft_toLeftOf="parent" />


    </LinearLayout>
</layout>